2006-09-01  Albert Chu  <chu11@llnl.gov>

	* src/modules/metric/cerebro_metric_memory.c (_read_memory):
	Replace asserts with DBG calls.

	* man/cerebro_module.3.in: Fixed typo.
	
2006-08-27  Albert Chu  <chu11@llnl.gov>

	* src/modules/metric/cerebro_metric_memory.h,
	src/modules/metric/cerebro_metric_memory.c: New files.

	* src/modules/metric/cerebro_metric_memtotal.c,
	src/modules/metric/cerebro_metric_memused.c,
	src/modules/metric/cerebro_metric_memfree.c,
	src/modules/metric/cerebro_metric_swaptotal.c,
	src/modules/metric/cerebro_metric_swapused.c,
	src/modules/metric/cerebro_metric_swapfree.c: Adjusted to use
	common function.

	* src/modules/metric/Makefile.am: Adjust for new files.

	* src/libs/common/marshall.h, src/libs/common/marshall.c
	(marshall_int64, marshall_u_int64, unmarshall_int64,
	unmarshall_u_int64): New functions.
	
	* src/cerebro-admin/cerebro-admin.c (_usage, _cmdline_parse),
	src/cerebro-stat/cerebro-stat.c (_metric_value_str),
	src/cerebrod/cerebrod_heartbeat.c (cerebrod_heartbeat_dump),
	src/cerebrod/cerebrod_listener_data.c (_metric_data_dump),
	src/libs/util/metric_util.c (_check_metric_type_len,
	_marshall_metric, _unmarshall_metric_value),
	src/libs/include/cerebro.h: Support new
	CEREBRO_METRIC_VALUE_TYPE_INT64 and
	CEREBRO_METRIC_VALUE_TYPE_U_INT64 metric value types.

	* src/modules/metric/cerebro_metric_memory.c,
	src/modules/metric/cerebro_metric_loadavg.c: Cache results rather
	than reading the proc file everytime.

	* config/ac_network.m4,
	src/modules/metric/cerebro_metric_network.h,
	src/modules/metric/cerebro_metric_network.c,
	src/modules/metric/cerebro_metric_bytesin.c,
	src/modules/metric/cerebro_metric_bytesout.c,
	src/modules/metric/cerebro_metric_packetsin.c,
	src/modules/metric/cerebro_metric_packetsout.c ,
	src/modules/metric/cerebro_metric_rxerrs.c,
	src/modules/metric/cerebro_metric_txerrs.c: New files.

	* src/modules/metric/Makefile.am, configure.ac,